--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="logo"><img src="img/logo.png" alt=""></div>
                 <button class="header-menu">Menu</button>
                 <nav class="header-nav">
-                    <ul class="flex-box">
+                    <ul class="list-inline">
                         <li><a href="http://">1</a></li>
                         <li><a href="http://">2</a></li>
                         <li><a href="http://">3</a></li>
@@ -25,6 +25,73 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <section class="section-container develop">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        ciao
+                    </div>
+                    <div class="col">
+                        ciao
+                    </div>
+                    <div class="col">
+                        ciao
+                    </div>
+                    <div class="col">
+                        ciao
+                    </div>
+                    <div class="col">
+                        ciao
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section-container planning">
+                <div class="container-2">
+                    <div class="row">
+                        <div class="col-2">bella</div>
+                        <div class="col-2">ciao</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section-container">
+                <div class="container">
+                    <div>ciao</div>
+                    <div class="row">
+                        <div class="col-2">bella</div>
+                        <div class="col-2">ciao</div>
+                        <div class="col-2">bella</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="benefit">
+            <div class="section-container">
+                <div class="container">
+                    <div>ciao</div>
+                    <div class="row">
+                        <div class="col-2">bella</div>
+                        <div class="col-2">ciao</div>
+                        <div class="col-2">bella</div>
+                        <div class="col-2">bella</div>
+                        <div class="col-2">ciao</div>
+                        <div class="col-2">bella</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+        </section>
+    </main>
     
 </body>
 </html>
