Completata Struttura Sito

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Layout</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -15,10 +16,10 @@
                 <button class="header-menu">Menu</button>
                 <nav class="header-nav">
                     <ul class="list-inline">
-                        <li><a href="http://">1</a></li>
-                        <li><a href="http://">2</a></li>
-                        <li><a href="http://">3</a></li>
-                        <li><a href="http://">4</a></li>
+                        <li><a href="http://">Planning</a></li>
+                        <li><a href="http://">Testimonials</a></li>
+                        <li><a href="http://">Features</a></li>
+                        <li><a href="http://">About Us</a></li>
                         <li><button><a href="http://">5</a></button></li>
                     </ul>
                 </nav>
@@ -27,70 +28,217 @@
     </header>
 
     <main>
-        <section class="section-container develop">
+        <section class="develop">
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        ciao
+                        <div class="card">
+                            <div class="demo-box">
+                                <h3>Get a demo application</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nemo iusto aperiam fugiat eligendi magnam eaque deserunt corporis, earum</p>
+                                <button></button>
+                            </div>
+                            <div class="demo-box">
+                                <img src="img/phone.png" alt="">
+                            </div>
+                        </div>
                     </div>
                     <div class="col">
-                        ciao
+                        <div class="card text-center">
+                            <div class="font-awesome"><i class="fa-solid fa-file-code"></i></div>
+                            <h3>Clean Code</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur aliquid ducimus adipisci, rem labore excepturi sed dolor eligendi earum! Eveniet accusamus quia possimus voluptatibus minus dignissimos quos, maxime excepturi. Commodi!</p>
+                        </div>
                     </div>
                     <div class="col">
-                        ciao
+                        <div class="card text-center">
+                            <div class="font-awesome"><i class="fa-solid fa-file-code"></i></div>
+                            <h3>Clean Code</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur aliquid ducimus adipisci, rem labore excepturi sed dolor eligendi earum! Eveniet accusamus quia possimus voluptatibus minus dignissimos quos, maxime excepturi. Commodi!</p>
+                        </div>
                     </div>
                     <div class="col">
-                        ciao
+                        <div class="card text-center">
+                            <div class="font-awesome"><i class="fa-solid fa-file-code"></i></div>
+                            <h3>Clean Code</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur aliquid ducimus adipisci, rem labore excepturi sed dolor eligendi earum! Eveniet accusamus quia possimus voluptatibus minus dignissimos quos, maxime excepturi. Commodi!</p>
+                        </div>
                     </div>
                     <div class="col">
-                        ciao
+                        <div class="card text-center">
+                            <div class="font-awesome"><i class="fa-solid fa-file-code"></i></div>
+                            <h3>Clean Code</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur aliquid ducimus adipisci, rem labore excepturi sed dolor eligendi earum! Eveniet accusamus quia possimus voluptatibus minus dignissimos quos, maxime excepturi. Commodi!</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section>
-            <div class="section-container planning">
-                <div class="container-2">
-                    <div class="row">
-                        <div class="col-2">bella</div>
-                        <div class="col-2">ciao</div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section>
+        <section class="planning">
             <div class="section-container">
-                <div class="container">
-                    <div>ciao</div>
-                    <div class="row">
-                        <div class="col-2">bella</div>
-                        <div class="col-2">ciao</div>
-                        <div class="col-2">bella</div>
+                <div class="container-2">
+                    <div class="row text-center">
+                        <div class="col-2 col-left">
+                            <img src="img/planning1.png" alt="">
+                            <div class="info">
+                                <h2>Strategic Planning</h2>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa, ea. Accusantium similique quod fugiat officiis veniam minima vero enim dolores recusandae! Illum, vitae. Ullam ipsam cupiditate omnis necessitatibus quae laborum?</p>
+                            </div>
+                        </div>
+                        <div class="col-2 col-right">
+                            <div class="card">
+                                <img src="img/planning2.png" alt="">
+                                <h3>App Development</h3>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum harum eveniet voluptates voluptatum fugiat, excepturi ipsam nulla assumenda, unde velit cum! Quod illo pariatur totam dolore debitis obcaecati itaque eum?</p>
+                                <button></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class=" testimonials">
+            <div class="container">
+                <div class="text-center">
+                    <h4>TESTIMONIALS</h4>
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa ipsam harum at consectetur ea error temporibus ullam consequatur! Vel quod animi architecto, tempore excepturi voluptatem est ipsa. Hic, cupiditate consequuntur.</p>
+                </div>
+                <div class="card border-radius-40">
+                    <div class="row align-items-center">
+                        <div class="col col-left">
+                            <img class="border-radius-circle" src="img/testimonial1.jpg" alt="">
+                        </div>
+                        <div class="col col-right">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, maxime animi. At debitis ducimus labore incidunt recusandae ratione tempora sed? Corporis nam nemo a, adipisci officia reprehenderit fuga nihil iusto.
+                            <p>Lorem Impsum</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card border-radius-40">
+                    <div class="row align-items-center">
+                        <div class="col col-left">
+                            <img class="border-radius-circle" src="img/testimonial2.jpg" alt="">
+
+                        </div>
+                        <div class="col col-right">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, maxime animi. At debitis ducimus labore incidunt recusandae ratione tempora sed? Corporis nam nemo a, adipisci officia reprehenderit fuga nihil iusto.
+                            <p>Lorem Impsum</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card border-radius-40">
+                    <div class="row align-items-center">
+                        <div class="col col-left">
+                            <img class="border-radius-circle" src="img/testimonial3.jpg" alt="">
+                        </div>
+                        <div class="col col-right">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, maxime animi. At debitis ducimus labore incidunt recusandae ratione tempora sed? Corporis nam nemo a, adipisci officia reprehenderit fuga nihil iusto.
+                            <p>Lorem Impsum</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
         <section class="benefit">
-            <div class="section-container">
                 <div class="container">
-                    <div>ciao</div>
+                    <div class="text-center">
+                        <h2>Benefit of working with us</h2>
+                    </div>
                     <div class="row">
-                        <div class="col-2">bella</div>
-                        <div class="col-2">ciao</div>
-                        <div class="col-2">bella</div>
-                        <div class="col-2">bella</div>
-                        <div class="col-2">ciao</div>
-                        <div class="col-2">bella</div>
+                        <div class="col">
+                            <div class="card">
+                                <h2>02</h2>
+                                <h3>High Quality</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis in sapiente, harum libero molestias esse quas ut. Voluptate vero</p>
+                                <button></button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <h2>02</h2>
+                                <h3>High Quality</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis in sapiente, harum libero molestias esse quas ut. Voluptate vero</p>
+                                <button></button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <h2>02</h2>
+                                <h3>High Quality</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis in sapiente, harum libero molestias esse quas ut. Voluptate vero</p>
+                                <button></button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <h2>02</h2>
+                                <h3>High Quality</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis in sapiente, harum libero molestias esse quas ut. Voluptate vero</p>
+                                <button></button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <h2>02</h2>
+                                <h3>High Quality</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis in sapiente, harum libero molestias esse quas ut. Voluptate vero</p>
+                                <button></button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <h2>02</h2>
+                                <h3>High Quality</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis in sapiente, harum libero molestias esse quas ut. Voluptate vero</p>
+                                <button></button>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+        </section>
+
+        <!-- section about-us -->
+        <section class="about-us">
+            <div class="container">
+                <div class="row">
+                    <div class="col col-left">
+                        <h2>About us</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur unde sunt consequatur nihil, necessitatibus similique laborum voluptatum atque optio temporibus provident ratione doloremque? Blanditiis dolorem, adipisci consequatur deserunt ab amet?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis non doloribus beatae cum. Fugiat, earum. Eum qui, a, adipisci cumque omnis perspiciatis nobis sunt dolorum, commodi illo quis vitae quas.</p>
+                    </div>
+                    <div class="col col-right">
+                        <img class="border-radius-circle" src="img/about.jpg" alt="">
+                        <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit dolores asperiores ducimus qui dolorem vitae eius omnis quis quidem, libero, sunt fugit fuga impedit soluta magni doloremque dolorum obcaecati placeat?</h4>
+                        <button>Linkedin</button>
                     </div>
                 </div>
             </div>
-        </section>
+         </section>
 
-        <section>
-        </section>
+         <!-- download -->
+         <section class="download text-center">
+            <div class="container">
+                <h4>GET STARTED</h4>
+                <h2>Simple, Transparent Pricing</h2>
+                <h3>It's Free</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <button>Get Started</button>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+         </section>
+    </main>
+
+    <footer class="text-center">
+        <div class="container">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe rem sed ducimus eius facilis molestias debitis enim</p>
+            <p><a href="http://">Lorem ipsum</a> dolor sit amet consectetur adipisicing elit. <a href="http://"> Saepe rem</a></p>
+        </div>
+    </footer>
     </main>
     
 </body>
