--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
     <title>Responsive Layout</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="flex-box space-between">
                 <div class="logo"><img src="img/logo.png" alt=""></div>
-                <button class="header-menu">Menu</button>
+                <button class="header-menu"><i class="fa-solid fa-bars"></i></button>
                 <nav class="header-nav">
                     <ul class="list-inline">
                         <li><a href="http://">Planning</a></li>
                         <li><a href="http://">Testimonials</a></li>
                         <li><a href="http://">Features</a></li>
                         <li><a href="http://">About Us</a></li>
-                        <li><button><a href="http://">5</a></button></li>
+                        <li><button class="btn btn-radius">Get Started</button></li>
                     </ul>
                 </nav>
             </div>
@@ -36,7 +39,7 @@
                             <div class="demo-box">
                                 <h3>Get a demo application</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nemo iusto aperiam fugiat eligendi magnam eaque deserunt corporis, earum</p>
-                                <button></button>
+                                <button class="btn-l btn-radius btn-blu"><i class="fa-brands fa-apple"></i> App Store</button>
                             </div>
                             <div class="demo-box">
                                 <img src="img/phone.png" alt="">
@@ -91,7 +94,7 @@
                                 <img src="img/planning2.png" alt="">
                                 <h3>App Development</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum harum eveniet voluptates voluptatum fugiat, excepturi ipsam nulla assumenda, unde velit cum! Quod illo pariatur totam dolore debitis obcaecati itaque eum?</p>
-                                <button></button>
+                                <button class="btn btn-radius btn-viola"><i class="fa-solid fa-arrow-down"></i></button>
                             </div>
                         </div>
                     </div>
@@ -154,7 +157,7 @@
                                 <h2>02</h2>
                                 <h3>High Quality</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis in sapiente, harum libero molestias esse quas ut. Voluptate vero</p>
-                                <button></button>
+                                <button class="btn-l btn-radius btn-viola white">more</button>
                             </div>
                         </div>
                         <div class="col">
@@ -162,7 +165,7 @@
                                 <h2>02</h2>
                                 <h3>High Quality</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis in sapiente, harum libero molestias esse quas ut. Voluptate vero</p>
-                                <button></button>
+                                <button class="btn-l btn-radius btn-viola white">more</button>
                             </div>
                         </div>
                         <div class="col">
@@ -170,7 +173,7 @@
                                 <h2>02</h2>
                                 <h3>High Quality</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis in sapiente, harum libero molestias esse quas ut. Voluptate vero</p>
-                                <button></button>
+                                <button class="btn-l btn-radius btn-viola white">more</button>
                             </div>
                         </div>
                         <div class="col">
@@ -178,7 +181,7 @@
                                 <h2>02</h2>
                                 <h3>High Quality</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis in sapiente, harum libero molestias esse quas ut. Voluptate vero</p>
-                                <button></button>
+                                <button class="btn-l btn-radius btn-viola white">more</button>
                             </div>
                         </div>
                         <div class="col">
@@ -186,7 +189,7 @@
                                 <h2>02</h2>
                                 <h3>High Quality</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis in sapiente, harum libero molestias esse quas ut. Voluptate vero</p>
-                                <button></button>
+                                <button class="btn-l btn-radius btn-viola white">more</button>
                             </div>
                         </div>
                         <div class="col">
@@ -194,7 +197,7 @@
                                 <h2>02</h2>
                                 <h3>High Quality</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis in sapiente, harum libero molestias esse quas ut. Voluptate vero</p>
-                                <button></button>
+                                <button class="btn-l btn-radius btn-viola white">more</button>
                             </div>
                         </div>
                     </div>
@@ -214,7 +217,7 @@
                     <div class="col col-right">
                         <img class="border-radius-circle" src="img/about.jpg" alt="">
                         <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit dolores asperiores ducimus qui dolorem vitae eius omnis quis quidem, libero, sunt fugit fuga impedit soluta magni doloremque dolorum obcaecati placeat?</h4>
-                        <button>Linkedin</button>
+                        <button class="btn btn-radius white btn-viola">Linkedin</button>
                     </div>
                 </div>
             </div>
@@ -227,7 +230,7 @@
                 <h2>Simple, Transparent Pricing</h2>
                 <h3>It's Free</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <button>Get Started</button>
+                <button class="btn purple btn-radius btn-xxxl">Get Started</button>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
          </section>
@@ -236,7 +239,7 @@
     <footer class="text-center">
         <div class="container">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe rem sed ducimus eius facilis molestias debitis enim</p>
-            <p><a href="http://">Lorem ipsum</a> dolor sit amet consectetur adipisicing elit. <a href="http://"> Saepe rem</a></p>
+            <p><a href="http://">Lorem ipsum</a> dolor sit amet consectetur adipisicing elit. <a href="http://"> Saepe rem</p>
         </div>
     </footer>
     </main>
